# tiago_ws

./: .gitignore  README  README.md  README.txt  README_tutorials.txt  requirements.txt
maps/pick_place_map/: submap_0.pgm
maps/tutorial3_1/: map.pgm
maps/tutorial3_1_office/: submap_0.pgm
src/: .rosinstall.bak
src/a_finial_project_robcup_athome/: CMakeLists.txt  README.txt  package.xml
src/a_finial_project_robcup_athome/launch/: demo.launch  finial_task.launch  follow_bag.launch  follow_human.launch  task_manager.launch
src/a_finial_project_robcup_athome/scripts/: final_goal.py  finial_task.py  follow_bag.py  follow_human.py  follow_point.py  hands_command.py  hansTracking.py  return_home.py  ros_hansTracking.py  (+13 more)
src/controllers_tutorials/: CMakeLists.txt  tutorial_controller_plugins.xml
src/hsrb_task_manager/: CMakeLists.txt
src/hsrb_task_manager/config/: way_points.yaml
src/hsrb_task_manager/launch/: finial_task.launch  task_manager.launch
src/hsrb_task_manager/scripts/: finial_task.py  task_manager1.py
src/ics_gazebo/: package.xml
src/plane_segmentation_jin/: CMakeLists.txt
src/robocup_at_home_final_project/: CMakeLists.txt  package.xml
src/tiago_localization/: CMakeLists.txt  package.xml
src/tiago_localization/include/tiago_localization/: localizer.h
src/tiago_localization/launch/: tiago_localization.launch
src/tiago_localization/launch/config/: config.yaml
src/tiago_localization/src/: tiago_localization_node.cpp
src/tiago_move_pick_place/: CMakeLists.txt  package.xml
src/tiago_robocup_navigation/: CMakeLists.txt  package.xml
(+75 files in other folders)
